--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,14 @@ services:
     depends_on:
       - migration
       - db
+
   db:
-    image: postgres:10.1
+    image: postgres:14
     volumes:
       - .:/tmp/data/
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
+
   migration:
     image: djangobase
     command: python manage.py migrate --noinput
