--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,24 @@
-# Framework
+asgiref==3.5.2
+astroid==2.12.13
+dill==0.3.6
 Django==4.1
+django-extensions==3.2.1
 djangorestframework==3.14.0
-
-# Lib
+factory-boy==3.2.1
+Faker==15.3.3
+flake8==6.0.0
+isort==5.10.1
+lazy-object-proxy==1.8.0
+mccabe==0.7.0
+platformdirs==2.5.4
 psycopg2-binary==2.9.5
-
-# Apps
-django-extensions
-
-# Test
-factory_boy
+pycodestyle==2.10.0
+pyflakes==3.0.1
+pylint==2.15.7
+python-dateutil==2.8.2
+pytz==2022.6
+six==1.16.0
+sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.6
+wrapt==1.14.1
